# Indiamart-mcp-server

./: .env  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  claude_desktop_config.json  docker-compose.yml  mcp_server.py  openclaw-config-example.json5  pyproject.toml  requirements-saas.txt  requirements.txt  server.json  smithery.yaml  webhook.py
.github/workflows/: ci.yml
docs/: examples.md  tools.md
mcp_tools/: Dockerfile  __init__.py  auth.py  database.py  http_client.py  schemas.py  tools.py
saas/: .env.example  Dockerfile  __init__.py  app.py  auth.py  config.py  crud.py  database.py  docker-compose.yml  middleware.py  models.py  railway.toml  render.yaml  requirements-saas.txt  schemas.py
saas/frontend/: analytics.html  billing.html  briefing.html  catalog.html  dashboard.html  landing.html  leads.html  login.html  manifest.json  pipeline.html  pricing.html  quotations.html  settings.html  shared.css  shared.js  signup.html  sw.js
saas/routes/: __init__.py  activity_routes.py  ai_routes.py  analytics_routes.py  auth_routes.py  briefing_routes.py  catalog_routes.py  lead_routes.py  notification_routes.py  payment_routes.py  pipeline_routes.py  reminder_routes.py  reply_routes.py  settings_routes.py  template_routes.py
saas/services/: __init__.py  ai_service.py  auto_reply_service.py  lead_service.py  notification_service.py  payment_service.py  plan_service.py  scheduler.py  sync_service.py
tests/: conftest.py  test_tools.py
