[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indiamart-mcp-server"
version = "1.1.0"
description = "MCP server for IndiaMART lead management with AI-powered CRM"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Vasanth"},
]
keywords = ["mcp", "indiamart", "leads", "crm", "ai", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
saas = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
    "pydantic[email]>=2.0.0",
    "python-multipart>=0.0.6",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
indiamart-mcp = "mcp_server:main"

[project.urls]
Homepage = "https://github.com/Techmatic-sys/indiamart-mcp-server"
Documentation = "https://github.com/Techmatic-sys/indiamart-mcp-server#readme"
"Bug Tracker" = "https://github.com/Techmatic-sys/indiamart-mcp-server/issues"
Changelog = "https://github.com/Techmatic-sys/indiamart-mcp-server/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["mcp_tools*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
